tests/sources/invalid/imports/visibility_provider.fire
//@ helper
export fn addOne(x: int32) -> int32 {
    return x + 1;
}

hiddenValue: int32 = 99;